lib/parser/parser.dart
import 'dart:collection';

import 'package:Birb/parser/data_type.dart';
import 'package:Birb/ast/ast_node.dart';
import 'package:Birb/ast/ast_types.dart';
import 'package:Birb/utils/constants.dart';
import 'package:Birb/utils/exceptions.dart';
import 'package:Birb/lexer/lexer.dart';
import 'package:Birb/utils/scope.dart';
import 'package:Birb/lexer/token.dart';


class Parser {
  Lexer lexer;
  Token prevToken;
  Token curToken;
  DataType dataType;
}

/// Initializes and returns a parser with a lexer
Parser initParser(Lexer lexer) {
  final parser = Parser()..lexer = lexer;
  parser.curToken = getNextToken(parser.lexer);

  return parser;
}

/// Throws an UnexpectedTypeException
void parserTypeError(Parser parser) => throw UnexpectedTypeException(
    '[Line ${parser.lexer.lineNum}] Invalid type');

/// Throws a SyntaxException
void parserSyntaxError(Parser parser) =>
    throw SyntaxException('[Line ${parser.lexer.lineNum}] Syntax error');

/// Throws a UnexpectedTokenException
void parserUnexpectedToken(Parser parser, TokenType type) =>
    throw UnexpectedTokenException(
        '[Line ${parser.lexer.lineNum}] Unexpected token `${parser.curToken.value}`, was expecting `$type`');

/// Sets the ast to be a child of a class
ASTNode asClassChild(ASTNode ast, ASTNode object) {
  ast.isClassChild = true;
  ast.parent = object;
  return ast;
}

/// Check if the token is a DataType
bool isDataType(Parser parser) {
  final String tokenValue = parser.curToken.value;

  final List dataTypes = [
    'void',
    'var',
    'int',
    'String',
    'StrBuffer',
    'double',
    'bool',
    'class',
    'enum',
    'List',
    'Map',
    'Source'
  ];

  final int lineNum = parser.lexer.lineNum;
  final int curIndex = parser.lexer.currentIndex;
  final String curChar = parser.lexer.currentChar;

  final bool isDot = getNextToken(parser.lexer).type == TokenType.TOKEN_DOT;

  parser.lexer
    ..lineNum = lineNum
    ..currentIndex = curIndex
    ..currentChar = curChar;

  for (final String type in dataTypes) {
    if (!isDot && type == tokenValue || type + '?' == tokenValue)
      return true;
  }

  return false;
}

/// Check if the current token is a variable modifier
bool isModifier(String tokenValue) {
  return tokenValue == CONST || tokenValue == FINAL;
}

/// Parses a single statement compound
/// ie:
/// ```dart
///  if (. . .)
///   screm("foo")
/// ```
ASTNode parseOneStatementCompound(Parser parser, Scope scope) {
  final compound = initASTWithLine(CompoundNode(), parser.lexer.lineNum);
  compound.scope = scope;

  final statement = parseStatement(parser, scope);
  compound.compoundValue.add(statement);

  return compound;
}

ASTNode parse(Parser parser, {Scope scope}) {
  return parseStatements(parser, scope);
}

void eat(Parser parser, TokenType type) {
  if (parser.curToken.type != type) {
    parserUnexpectedToken(parser, type);
  } else {
    parser.prevToken = parser.curToken;
    parser.curToken = getNextToken(parser.lexer);
  }
}

ASTNode parseStatement(Parser parser, Scope scope) {
  switch (parser.curToken.type) {
    case TokenType.TOKEN_ID:
      {
        final tokenValue = parser.curToken.value;

        if (isModifier(tokenValue)) {
          eat(parser, TokenType.TOKEN_ID);
          if (tokenValue == FINAL)
            return parseDefinition(parser, scope, false, true);

          return parseDefinition(parser, scope, true);
        }

        if (isDataType(parser)) {
          return parseDefinition(parser, scope);
        }

        switch (tokenValue) {
          case WHILE:
            return parseWhile(parser, scope);
          case FOR:
            return parseFor(parser, scope);
          case IF:
            return parseIf(parser, scope);
          case SWITCH:
            return parseSwitch(parser, scope);
          case FALSE:
          case TRUE:
            return parseBool(parser, scope);
          case NULL:
            return parseNull(parser, scope);
          case RETURN:
            return parseReturn(parser, scope);
          case THROW:
            return parseThrow(parser, scope);
          case BREAK:
            return parseBreak(parser, scope);
          case NEXT:
            return parseNext(parser, scope);
          case NEW:
            return parseNew(parser, scope);
          case ITERATE:
            return parseIterate(parser, scope);
          case ASSERT:
            return parseAssert(parser, scope);
        }

        eat(parser, TokenType.TOKEN_ID);

        var a = parseVariable(parser, scope);

        while (parser.curToken.type == TokenType.TOKEN_LPAREN) {
          a = parseFunctionCall(parser, scope, a);
        }

        while (parser.curToken.type == TokenType.TOKEN_DOT) {
          eat(parser, TokenType.TOKEN_DOT);

          final ast = initASTWithLine(AttributeAccessNode(), parser.lexer.lineNum)..binaryOpLeft = a;

          eat(parser, TokenType.TOKEN_ID);

          final varAST = parseVariable(parser, scope);

          ast.binaryOpRight = parser.curToken.type == TokenType.TOKEN_LPAREN
              ? parseFunctionCall(parser, scope, varAST)
              : varAST;
          a = ast;
        }

        while (parser.curToken.type == TokenType.TOKEN_LBRACKET) {
          final astListAccess = initASTWithLine(ListAccessNode(), parser.lexer.lineNum);
          astListAccess.binaryOpLeft = a;
          eat(parser, TokenType.TOKEN_LBRACKET);

          astListAccess.listAccessPointer = parseExpression(parser, scope);

          eat(parser, TokenType.TOKEN_RBRACKET);

          a = astListAccess;
        }

        if (a != null)
          return a;
      }
      break;
    case TokenType.TOKEN_LESS_THAN:
      eat(parser, TokenType.TOKEN_LESS_THAN);

      final String annotation = parser.curToken.value;
      eat(parser, TokenType.TOKEN_ID);

      eat(parser, TokenType.TOKEN_GREATER_THAN);

      switch (annotation) {
        case SUPERSEDE:
          return parseDefinition(
              parser,
              scope,
              parser.curToken.value == 'const',
              parser.curToken.value == 'final',
              true);
        default:
          throw UnexpectedTokenException(
              'No annotation ${parser.curToken.value} found!');
      }
      break;
    case TokenType.TOKEN_NUMBER_VALUE:
    case TokenType.TOKEN_STRING_VALUE:
    case TokenType.TOKEN_DOUBLE_VALUE:
    case TokenType.TOKEN_INT_VALUE:
      return parseExpression(parser, scope);
    case TokenType.TOKEN_PLUS_PLUS:
    case TokenType.TOKEN_SUB_SUB:
    case TokenType.TOKEN_MUL_MUL:
      {
        final Token operator = parser.curToken;
        eat(parser, operator.type);

        final ASTNode astVarMod = initASTWithLine(VarModNode(), parser.lexer.lineNum)
          ..binaryOpRight = parseStatement(parser, scope)
          ..binaryOperator = operator
          ..scope = scope;

        return astVarMod;
      }
      break;
    case TokenType.TOKEN_LBRACE:
      final int lineNum = parser.lexer.lineNum;
      while (parser.curToken.type != TokenType.TOKEN_RBRACE) {
        if (parser.lexer.currentIndex == parser.lexer.program.length)
          throw UnexpectedTokenException('[Lines $lineNum-${parser.lexer.lineNum}] No closing brace `}` was found');
        eat(parser, parser.curToken.type);
      }
      eat(parser, TokenType.TOKEN_RBRACE);

      return initASTWithLine(NoopNode(), lineNum);

    case TokenType.TOKEN_LBRACKET:
      return parseList(parser, scope);

    default:
      return initASTWithLine(NoopNode(), parser.lexer.lineNum);
  }

  return initASTWithLine(NoopNode(), parser.lexer.lineNum);
}

ASTNode parseStatements(Parser parser, Scope scope) {
  final compound = initASTWithLine(CompoundNode(), parser.lexer.lineNum);
  compound.scope = scope;

  ASTNode statement = parseStatement(parser, scope);

  compound.compoundValue.add(statement);

  while (parser.curToken.type == TokenType.TOKEN_SEMI ||
      parser.prevToken?.type == TokenType.TOKEN_RBRACE &&
          statement.type != ASTType.AST_NOOP) {
    if (parser.curToken.type == TokenType.TOKEN_SEMI)
      eat(parser, TokenType.TOKEN_SEMI);

    statement = parseStatement(parser, scope);

    compound.compoundValue.add(statement);
  }

  if (parser.curToken.type != TokenType.TOKEN_RBRACE &&
      parser.lexer.currentIndex != parser.lexer.program.length)
    throw UnexpectedTokenException(
        'Error [Line ${parser.lexer.lineNum}]: Expected `;` but found `${parser.curToken.value}`');

  return compound;
}

ASTNode parseType(Parser parser, Scope scope) {
  final ASTNode astType = initASTWithLine(TypeNode(), parser.lexer.lineNum)
    ..scope = scope;

  final type = initDataType();

  var tokenValue = parser.curToken.value;

  if (tokenValue.endsWith('?'))
    tokenValue =
        tokenValue.replaceRange(tokenValue.length - 1, tokenValue.length, '');

  switch (tokenValue) {
    case 'void':
      type.type = DATATYPE.DATA_TYPE_VOID;
      break;
    case 'String':
      type.type = DATATYPE.DATA_TYPE_STRING;
      break;
    case 'StrBuffer':
      type.type = DATATYPE.DATA_TYPE_STRING_BUFFER;
      break;
    case 'var':
      type.type = DATATYPE.DATA_TYPE_VAR;
      break;
    case 'int':
      type.type = DATATYPE.DATA_TYPE_INT;
      break;
    case 'double':
      type.type = DATATYPE.DATA_TYPE_DOUBLE;
      break;
    case 'bool':
      type.type = DATATYPE.DATA_TYPE_BOOL;
      break;
    case 'class':
      type.type = DATATYPE.DATA_TYPE_CLASS;
      break;
    case 'enum':
      type.type = DATATYPE.DATA_TYPE_ENUM;
      break;
    case 'List':
      type.type = DATATYPE.DATA_TYPE_LIST;
      break;
    case 'Map':
      type.type = DATATYPE.DATA_TYPE_MAP;
      break;
    case 'Source':
      type.type = DATATYPE.DATA_TYPE_SOURCE;
      break;
  }

  astType.typeValue = type;

  eat(parser, TokenType.TOKEN_ID);

  return astType;
}

ASTNode parseDouble(Parser parser, Scope scope) {
  final ast = initASTWithLine(DoubleNode(), parser.lexer.lineNum);
  ast.scope = scope;
  ast.doubleVal = double.parse(parser.curToken.value);

  eat(parser, TokenType.TOKEN_DOUBLE_VALUE);

  return ast;
}

ASTNode parseString(Parser parser, Scope scope) {
  final ast = initASTWithLine(StringNode(), parser.lexer.lineNum)
    ..scope = scope
    ..stringValue = parser.curToken.value;

  eat(parser, TokenType.TOKEN_STRING_VALUE);

  return ast;
}

ASTNode parseInt(Parser parser, Scope scope) {
  final ast = initASTWithLine(IntNode(), parser.lexer.lineNum)
    ..scope = scope
    ..intVal = int.tryParse(parser.curToken.value);

  eat(parser, TokenType.TOKEN_INT_VALUE);

  return ast;
}

ASTNode parseBool(Parser parser, Scope scope) {
  final ast = initASTWithLine(BoolNode(), parser.lexer.lineNum)..scope = scope;

  if (parser.curToken.value == 'false' || parser.curToken.value == 'true') {
    ast.boolVal = parser.curToken.value == 'true';
  } else {
    print('Expected a boolean value, but got ${parser.curToken.value}');
  }

  eat(parser, TokenType.TOKEN_ID);

  return ast;
}

ASTNode parseNull(Parser parser, Scope scope) {
  final ast = initASTWithLine(NoSeebNode(), parser.lexer.lineNum)..scope = scope;

  eat(parser, TokenType.TOKEN_ID);

  return ast;
}

ASTNode parseVariable(Parser parser, Scope scope) {
  final ast = initASTWithLine(VariableNode(), parser.lexer.lineNum)
    ..scope = scope
    ..variableName = parser.prevToken.value;

  if (parser.curToken.type == TokenType.TOKEN_RBRACE) {
    final astAssign = initASTWithLine(VarAssignmentNode(), parser.lexer.lineNum)
      ..variableAssignmentLeft = ast
      ..variableValue = parseExpression(parser, scope)
      ..scope = scope;

    return astAssign;
  }

  if (parser.curToken.type == TokenType.TOKEN_EQUAL) {
    eat(parser, TokenType.TOKEN_EQUAL);
    final astAssign = initASTWithLine(VarAssignmentNode(), parser.lexer.lineNum);
    astAssign.variableAssignmentLeft = ast;
    astAssign.variableValue = parseExpression(parser, scope);
    astAssign.scope = scope;

    return astAssign;
  }
  if (parser.curToken.type == TokenType.TOKEN_PLUS_PLUS ||
      parser.curToken.type == TokenType.TOKEN_SUB_SUB ||
      parser.curToken.type == TokenType.TOKEN_MUL_MUL) {
    final Token operator = parser.curToken;

    eat(parser, operator.type);

    final ASTNode astVarMod = initASTWithLine(VarModNode(), parser.lexer.lineNum)
      ..binaryOpLeft = ast
      ..binaryOperator = operator
      ..scope = scope;

    return astVarMod;
  } else if (parser.curToken.type == TokenType.TOKEN_PLUS_EQUAL ||
      parser.curToken.type == TokenType.TOKEN_SUB_EQUAL ||
      parser.curToken.type == TokenType.TOKEN_MUL_EQUAL ||
      parser.curToken.type == TokenType.TOKEN_DIV_EQUAL ||
      parser.curToken.type == TokenType.TOKEN_MOD_EQUAL ||
      parser.curToken.type == TokenType.TOKEN_NOSEEB_ASSIGNMENT) {
    final Token operator = parser.curToken;

    eat(parser, operator.type);

    final ASTNode astVarMod = initASTWithLine(VarModNode(), parser.lexer.lineNum)
      ..binaryOpLeft = ast
      ..binaryOpRight = parseExpression(parser, scope)
      ..binaryOperator = operator
      ..scope = scope;

    return astVarMod;
  }

  return ast;
}

ASTNode parseBrace(Parser parser, Scope scope) {
  if (parser.prevToken.type != TokenType.TOKEN_ID)
    return parseMap(parser, scope);

  return parseClass(parser, scope);
}

ASTNode parseClass(Parser parser, Scope scope) {
  final ASTNode ast = initASTWithLine(ClassNode(), parser.lexer.lineNum)
    ..scope = scope
    ..className = parser.prevToken.value
    ..classChildren = ListQueue();

  final newScope = initScope(false);

  if (scope != null && scope.owner != null)
      newScope.owner = scope.owner;

  eat(parser, TokenType.TOKEN_LBRACE);

  if (parser.curToken.type != TokenType.TOKEN_RBRACE) {
    if (parser.curToken.type == TokenType.TOKEN_ID ||
        parser.curToken.type == TokenType.TOKEN_LESS_THAN) {
      ast.classChildren
          .add(asClassChild(parseDefinition(parser, newScope), ast));
    }

    while (parser.curToken.type == TokenType.TOKEN_SEMI ||
        (parser.prevToken.type == TokenType.TOKEN_RBRACE &&
            parser.curToken.type != TokenType.TOKEN_RBRACE)) {
      if (parser.curToken.type == TokenType.TOKEN_SEMI)
        eat(parser, TokenType.TOKEN_SEMI);

      if (parser.curToken.type == TokenType.TOKEN_ID ||
          parser.curToken.type == TokenType.TOKEN_LESS_THAN) {
        ast.classChildren
            .add(asClassChild(parseDefinition(parser, newScope), ast));
      }
    }
  }

  eat(parser, TokenType.TOKEN_RBRACE);

  return ast;
}

ASTNode parseEnum(Parser parser, Scope scope) {
  final ast = initASTWithLine(EnumNode(), parser.lexer.lineNum);
  ast.scope = scope;
  ast.enumElements = [];

  final newScope = initScope(false);

  if (scope != null) {
    if (scope.owner != null) {
      newScope.owner = scope.owner;
    }
  }

  eat(parser, TokenType.TOKEN_LBRACE);

  if (parser.curToken.type != TokenType.TOKEN_RBRACE) {
    if (parser.curToken.type == TokenType.TOKEN_ID) {
      eat(parser, TokenType.TOKEN_ID);
      ast.enumElements.add(parseVariable(parser, newScope));
    }

    while (parser.curToken.type == TokenType.TOKEN_COMMA) {
      eat(parser, TokenType.TOKEN_COMMA);

      if (parser.curToken.type == TokenType.TOKEN_ID) {
        eat(parser, TokenType.TOKEN_ID);
        ast.enumElements.add(parseVariable(parser, newScope));
      }
    }
  }

  eat(parser, TokenType.TOKEN_RBRACE);

  return ast;
}

ASTNode parseMap(Parser parser, Scope scope) {
  eat(parser, TokenType.TOKEN_LBRACE);

  final ast = initASTWithLine(MapNode(), parser.lexer.lineNum);
  ast.scope = scope;
  ast.map = {};

  if (parser.curToken.type != TokenType.TOKEN_RBRACE) {
    if (parser.curToken.type == TokenType.TOKEN_STRING_VALUE) {
      final String key = parser.curToken.value;
      eat(parser, TokenType.TOKEN_STRING_VALUE);

      if (parser.curToken.type == TokenType.TOKEN_COLON)
        eat(parser, TokenType.TOKEN_COLON);
      else
        throw UnexpectedTokenException(
            'Error: [Line ${parser.lexer.lineNum}] Unexpected token `${parser.curToken.value}`, expected `:`.');

      if (parser.curToken.type == TokenType.TOKEN_COMMA)
        throw UnexpectedTokenException(
            'Error: [Line ${parser.lexer.lineNum}] Expected value for key `$key`');
      ast.map[key] = parseExpression(parser, scope);
    } else
      throw UnexpectedTokenException(
          'Error: [Line ${parser.lexer.lineNum}] Maps can only hold strings as keys.');
  }

  while (parser.curToken.type == TokenType.TOKEN_COMMA) {
    eat(parser, TokenType.TOKEN_COMMA);

    final String key = parser.curToken.value;
    eat(parser, TokenType.TOKEN_STRING_VALUE);

    if (parser.curToken.type == TokenType.TOKEN_COLON)
      eat(parser, TokenType.TOKEN_COLON);
    else
      throw UnexpectedTokenException(
          'Error: [Line ${parser.lexer.lineNum}] Unexpected token `${parser.curToken.value}`, expected `:`.');

    if (parser.curToken.type == TokenType.TOKEN_COMMA)
      throw UnexpectedTokenException(
          'Error: [Line ${parser.lexer.lineNum}] Expected value for key `$key`');

    ast.map[key] = parseExpression(parser, scope);
  }

  eat(parser, TokenType.TOKEN_RBRACE);
  return ast;
}

ASTNode parseList(Parser parser, Scope scope) {
  eat(parser, TokenType.TOKEN_LBRACKET);
  final ast = initASTWithLine(ListNode(), parser.lexer.lineNum);
  ast.scope = scope;
  ast.listElements = [];

  if (parser.curToken.type != TokenType.TOKEN_RBRACKET) {
    ast.listElements.add(parseExpression(parser, scope));
  }

  while (parser.curToken.type == TokenType.TOKEN_COMMA) {
    eat(parser, TokenType.TOKEN_COMMA);
    ast.listElements.add(parseExpression(parser, scope));
  }

  eat(parser, TokenType.TOKEN_RBRACKET);
  return ast;
}

ASTNode parseFactor(Parser parser, Scope scope, bool isMap) {
  while (parser.curToken.type == TokenType.TOKEN_PLUS ||
      parser.curToken.type == TokenType.TOKEN_SUB ||
      parser.curToken.type == TokenType.TOKEN_PLUS_PLUS ||
      parser.curToken.type == TokenType.TOKEN_SUB_SUB ||
      parser.curToken.type == TokenType.TOKEN_NOT ||
      parser.curToken.type == TokenType.TOKEN_ONES_COMPLEMENT) {
    final unOpOperator = parser.curToken;
    eat(parser, unOpOperator.type);

    final ast = initASTWithLine(UnaryOpNode(), parser.lexer.lineNum);
    ast.scope = scope;
    ast.unaryOperator = unOpOperator;
    ast.unaryOpRight = parseTerm(parser, scope);

    return ast;
  }

  if (parser.curToken.type == TokenType.TOKEN_ID) {
    switch (parser.curToken.value) {
    case TRUE:
    case FALSE:
      return parseBool(parser, scope);
    case NULL:
      return parseNull(parser, scope);
    case NEW:
      return parseNew(parser, scope);
  }
  }

  if (parser.curToken.type == TokenType.TOKEN_PLUS ||
      parser.curToken.type == TokenType.TOKEN_SUB ||
      parser.curToken.type == TokenType.TOKEN_PLUS_PLUS ||
      parser.curToken.type == TokenType.TOKEN_SUB_SUB ||
      parser.curToken.type == TokenType.TOKEN_NOT ||
      parser.curToken.type == TokenType.TOKEN_BITWISE_AND ||
      parser.curToken.type == TokenType.TOKEN_BITWISE_OR ||
      parser.curToken.type == TokenType.TOKEN_BITWISE_XOR ||
      parser.curToken.type == TokenType.NOSEEB_AWARE_OPERATOR ||
      parser.curToken.type == TokenType.TOKEN_LSHIFT ||
      parser.curToken.type == TokenType.TOKEN_RSHIFT) {
    eat(parser, parser.curToken.type);

    var a = parseVariable(parser, scope).binaryOpRight;

    while (parser.curToken.type == TokenType.TOKEN_DOT) {
      eat(parser, TokenType.TOKEN_DOT);
      final ast = initASTWithLine(AttributeAccessNode(), parser.lexer.lineNum);
      ast.binaryOpLeft = a;
      eat(parser, TokenType.TOKEN_ID);
      final varAST = parseVariable(parser, scope);
      ast.binaryOpRight = parser.curToken.type == TokenType.TOKEN_LPAREN
          ? parseFunctionCall(parser, scope, varAST)
          : varAST;
      a = ast;
    }

    while (parser.curToken.type == TokenType.TOKEN_DOT) {
      eat(parser, TokenType.TOKEN_DOT);
      final ast = initASTWithLine(AttributeAccessNode(), parser.lexer.lineNum);
      ast.binaryOpLeft = a;
      eat(parser, TokenType.TOKEN_ID);
      final varAST = parseVariable(parser, scope);
      ast.binaryOpRight = parser.curToken.type == TokenType.TOKEN_LPAREN
          ? parseFunctionCall(parser, scope, varAST)
          : varAST;
      a = ast;
    }

    while (parser.curToken.type == TokenType.TOKEN_LBRACKET) {
      final astListAccess =
          initASTWithLine(ListAccessNode(), parser.lexer.lineNum);
      astListAccess.binaryOpLeft = a;

      eat(parser, TokenType.TOKEN_LBRACKET);
      astListAccess.listAccessPointer = parseExpression(parser, scope);
      eat(parser, TokenType.TOKEN_RBRACKET);

      a = astListAccess;
    }

    while (parser.curToken.type == TokenType.TOKEN_LPAREN)
      a = parseFunctionCall(parser, scope, a);

    if (a != null)
      return a;
  }

  if (parser.curToken.type == TokenType.TOKEN_ID) {
    eat(parser, parser.curToken.type);

    var a = parseVariable(parser, scope);

    while (parser.curToken.type == TokenType.TOKEN_DOT) {
      eat(parser, TokenType.TOKEN_DOT);
      final ast = initASTWithLine(AttributeAccessNode(), parser.lexer.lineNum);
      ast.binaryOpLeft = a;
      eat(parser, TokenType.TOKEN_ID);
      final varAST = parseVariable(parser, scope);
      ast.binaryOpRight = parser.curToken.type == TokenType.TOKEN_LPAREN
          ? parseFunctionCall(parser, scope, varAST)
          : varAST;
      a = ast;
    }

    while (parser.curToken.type == TokenType.TOKEN_LBRACKET) {
      final astListAccess =
          initASTWithLine(ListAccessNode(), parser.lexer.lineNum);
      astListAccess.binaryOpLeft = a;

      eat(parser, TokenType.TOKEN_LBRACKET);
      astListAccess.listAccessPointer = parseExpression(parser, scope);
      eat(parser, TokenType.TOKEN_RBRACKET);

      a = astListAccess;
    }

    while (parser.curToken.type == TokenType.TOKEN_LPAREN)
      a = parseFunctionCall(parser, scope, a);

    if (a != null)
      return a;
  }

  /* */
  if (parser.curToken.type == TokenType.TOKEN_LPAREN) {
    eat(parser, TokenType.TOKEN_LPAREN);
    final astExpression = parseExpression(parser, scope);
    eat(parser, TokenType.TOKEN_RPAREN);

    return astExpression;
  }

  switch (parser.curToken.type) {
    case TokenType.TOKEN_NUMBER_VALUE:
    case TokenType.TOKEN_INT_VALUE:
      return parseInt(parser, scope);
    case TokenType.TOKEN_DOUBLE_VALUE:
      return parseDouble(parser, scope);
    case TokenType.TOKEN_STRING_VALUE:
      return parseString(parser, scope);
    case TokenType.TOKEN_LBRACE:
      return parseBrace(parser, scope);
    case TokenType.TOKEN_LBRACKET:
      return parseList(parser, scope);
    default:
      throw UnexpectedTokenException('Unexpected ${parser.curToken.value}');
      break;
  }
}

ASTNode parseTerm(Parser parser, Scope scope, {bool isFuncDefArgs = false}) {
  final tokenValue = parser.curToken.value;

  if (isModifier(tokenValue)) {
    eat(parser, TokenType.TOKEN_ID);
    if (tokenValue == FINAL)
      return parseDefinition(parser, scope, false, true, false, true);

    return parseDefinition(parser, scope, true, false, false, true);
  }

  if (isDataType(parser))
    return parseDefinition(parser, scope, false, false, false, true);

  var node = parseFactor(parser, scope, false);
  ASTNode astBinaryOp;

  if (parser.curToken.type == TokenType.TOKEN_LPAREN)
    node = parseFunctionCall(parser, scope, node);

  while (parser.curToken.type == TokenType.TOKEN_DIV ||
      parser.curToken.type == TokenType.TOKEN_MUL ||
      parser.curToken.type == TokenType.TOKEN_LESS_THAN ||
      parser.curToken.type == TokenType.TOKEN_GREATER_THAN ||
      parser.curToken.type == TokenType.TOKEN_LESS_THAN_EQUAL ||
      parser.curToken.type == TokenType.TOKEN_GREATER_THAN_EQUAL ||
      parser.curToken.type == TokenType.TOKEN_EQUALITY ||
      parser.curToken.type == TokenType.TOKEN_NOT_EQUAL) {
    final binaryOpOperator = parser.curToken;
    eat(parser, binaryOpOperator.type);

    astBinaryOp = initASTWithLine(BinaryOpNode(), parser.lexer.lineNum);

    astBinaryOp.binaryOpLeft = node;
    astBinaryOp.binaryOperator = binaryOpOperator;
    astBinaryOp.binaryOpRight = parseFactor(parser, scope, false);

    node = astBinaryOp;
  }
  return node;
}

ASTNode parseExpression(Parser parser, Scope scope,
    {bool isFuncDefArgs = false}) {
  var node = parseTerm(parser, scope, isFuncDefArgs: isFuncDefArgs);
  ASTNode astBinaryOp;

  while (parser.curToken.type == TokenType.TOKEN_PLUS ||
      parser.curToken.type == TokenType.TOKEN_SUB ||
      parser.curToken.type == TokenType.TOKEN_PLUS_PLUS ||
      parser.curToken.type == TokenType.TOKEN_SUB_SUB ||
      parser.curToken.type == TokenType.TOKEN_NOT ||
      parser.curToken.type == TokenType.TOKEN_BITWISE_AND ||
      parser.curToken.type == TokenType.TOKEN_BITWISE_OR ||
      parser.curToken.type == TokenType.TOKEN_BITWISE_XOR ||
      parser.curToken.type == TokenType.TOKEN_LSHIFT ||
      parser.curToken.type == TokenType.NOSEEB_AWARE_OPERATOR ||
      parser.curToken.type == TokenType.TOKEN_RSHIFT) {
    if (parser.curToken.type == TokenType.TOKEN_PLUS_PLUS ||
        parser.curToken.type == TokenType.TOKEN_SUB_SUB) {
      final binaryOp = parser.curToken;
      eat(parser, binaryOp.type);

      astBinaryOp = initASTWithLine(BinaryOpNode(), parser.lexer.lineNum);
      astBinaryOp.scope = scope;

      astBinaryOp.binaryOpLeft = node;
      astBinaryOp.binaryOperator = binaryOp;
      astBinaryOp.binaryOpRight =
          parseTerm(parser, scope, isFuncDefArgs: isFuncDefArgs);

      node = astBinaryOp;
    } else {
      final binaryOp = parser.curToken;
      eat(parser, binaryOp.type);

      astBinaryOp = initASTWithLine(BinaryOpNode(), parser.lexer.lineNum);
      astBinaryOp.scope = scope;

      astBinaryOp.binaryOpLeft = node;
      astBinaryOp.binaryOperator = binaryOp;
      astBinaryOp.binaryOpRight =
          parseTerm(parser, scope, isFuncDefArgs: isFuncDefArgs);

      node = astBinaryOp;
    }
  }

  while (parser.curToken.type == TokenType.TOKEN_AND ||
      parser.curToken.type == TokenType.TOKEN_OR) {
    final binaryOp = parser.curToken;
    eat(parser, binaryOp.type);

    astBinaryOp = initASTWithLine(BinaryOpNode(), parser.lexer.lineNum);
    astBinaryOp.scope = scope;

    astBinaryOp.binaryOpLeft = node;
    astBinaryOp.binaryOperator = binaryOp;
    astBinaryOp.binaryOpRight = parseTerm(parser, scope);

    node = astBinaryOp;
  }

  if (parser.curToken.type == TokenType.TOKEN_QUESTION)
    return parseTernary(parser, scope, node);

  return node;
}

ASTNode parseBreak(Parser parser, Scope scope) {
  eat(parser, TokenType.TOKEN_ID);

  return initASTWithLine(BreakNode(), parser.lexer.lineNum);
}

ASTNode parseNext(Parser parser, Scope scope) {
  eat(parser, TokenType.TOKEN_ID);

  return initASTWithLine(NextNode(), parser.lexer.lineNum);
}

ASTNode parseNew(Parser parser, Scope scope) {
  eat(parser, TokenType.TOKEN_ID);

  final ASTNode newAST = initASTWithLine(NewNode(), parser.lexer.lineNum)
    ..newValue = parseExpression(parser, scope);

  return newAST;
}

ASTNode parseReturn(Parser parser, Scope scope) {
  eat(parser, TokenType.TOKEN_ID);
  final ast = initASTWithLine(ReturnNode(), parser.lexer.lineNum)
    ..scope = scope
    ..returnValue = parseExpression(parser, scope) ?? NoSeebNode();

  return ast;
}
